[package]
name = "arch-repro-status"
version = "1.2.1"
description = "Check the reproducibility status of your Arch Linux packages"
authors = ["Orhun Parmaksız <orhun@archlinux.org>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
homepage = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
repository = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
keywords = ["archlinux", "reproducibility", "build"]
categories = ["command-line-utilities"]
publish = false
default-run = "arch-repro-status"

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.6.0", features = ["full"] }
futures = { version = "0.3.15", features = ["executor"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.24"
anyhow = "1.0.40"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rebuilderd-common = "0.12.0"
colored = "2.0.0"
dialoguer = "0.8.0"
ctrlc = { version = "3.1.9", features = ["termination"] }
console = "0.14.1"
dirs-next = "2.0.0"
bytesize = "1.0.1"
alpm = "2.0.0"
chrono = "0.4.19"

[dependencies.structopt]
version = "0.3.21"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
pretty_assertions = "0.7.2"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
