[package]
name = "arch-repro-status"
version = "1.2.6"
description = "Check the reproducibility status of your Arch Linux packages"
authors = ["Orhun Parmaksız <orhun@archlinux.org>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
homepage = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
repository = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
keywords = ["archlinux", "reproducibility", "build"]
categories = ["command-line-utilities"]
publish = false
default-run = "arch-repro-status"

[[bin]]
name = "arch-repro-status-completions"
path = "src/bin/completions.rs"

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
reqwest = { version = "0.11.5", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = { version = "0.3.17", features = ["executor"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
thiserror = "1.0.30"
anyhow = "1.0.44"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rebuilderd-common = "0.15.0"
colored = "2.0.0"
dialoguer = "0.9.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
console = "0.15.0"
dirs-next = "2.0.0"
bytesize = "1.1.0"
alpm = "2.1.3"
chrono = "0.4.19"

[dependencies.structopt]
version = "0.3.23"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
pretty_assertions = "1.0.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
