[package]
name = "arch-repro-status"
version = "1.2.8"
description = "Check the reproducibility status of your Arch Linux packages"
authors = ["Orhun Parmaksız <orhun@archlinux.org>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
homepage = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
repository = "https://gitlab.archlinux.org/archlinux/arch-repro-status"
keywords = ["archlinux", "reproducibility", "build"]
categories = ["command-line-utilities"]
publish = false
default-run = "arch-repro-status"

[[bin]]
name = "arch-repro-status-completions"
path = "src/bin/completions.rs"

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
futures = { version = "0.3.21", features = ["executor"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
anyhow = "1.0.56"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rebuilderd-common = "0.18.1"
colored = "2.0.0"
dialoguer = "0.10.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
console = "0.15.0"
dirs-next = "2.0.0"
bytesize = "1.1.0"
alpm = "2.2.1"
chrono = "0.4.19"
clap_complete = "3.0.5"

[dependencies.clap]
version = "3.1.6"
features = ["derive", "env", "wrap_help"]

[dev-dependencies]
pretty_assertions = "1.1.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
